resources/css/product.css
.container {
    background-color: black;
    line-height: 1.5;
    margin: 1 rem;
    padding: 40px 25px;
}

abbr {
    position: relative;
}

abbr:hover::after {
    background: #000000;
    color:rgb(255, 255, 255);
    box-shadow: 5px 10px 2px #000000ab;
    bottom: 100%;
    content: attr(data);
    display: block;
    left: 100%;
    padding: 1em;
    position: absolute;
    width: 280px;
    z-index: 1;
}

